# PET-Ner

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  stream_server_ros.py
Docs/: DEFAULT_TTS_PLAN.md  DEFAULT_TTS_TEST_GUIDE.md  KOREAN_TTS_PRONUNCIATION_ANALYSIS.md  PI5_AUDIO_PLAYER.md
Feed_AI/models/: config.yaml
TTS/: .gitignore  nono.py
TTS/Docs/: API_ERROR_RESOLUTION_500_403.md  EDGE_TTS_DEFAULT_VOICE_TEST.md  JETSON_PYTORCH_SETUP.md  JETSON_TO_PI5_AUDIO_OUTPUT.md  LLM_PREFIX_TOKEN_EXTRACTION_ANALYSIS.md  MEMORY_SAVING.md  REMAINING_TASKS.md  TTS_DEBUG_CHECKLIST.md  TTS_RESULT_CHECKLIST.md  VOICE_TOKEN_CHECKLIST.md  VOICE_TRAINING_AUDIO_FORMAT.md
TTS/client/: package-lock.json  package.json  vite.config.js
TTS/cosyvoice_service/: Dockerfile  compare_token_extraction.py  extract_default_tokens.ps1  extract_tokens_api.py  test_default_tts.py  test_edge_tts.py
TTS/scripts/: README_cosyvoice_inference_zip.md  pi5_audio_player.py  unzip_cosyvoice.py
TTS/server/: build.gradle
WEB/: .gitignore
WEB/nginx/: Dockerfile
WEB/robot_test/: homing.py  mqtt_bridge.py  robot_control.py  robot_webrtc.py
WEB/server/: HELP.md
[RPi] cat_bot_ws/: .gitignore
[Rpi] cat_bot_ws/: .gitignore
[Rpi] cat_bot_ws/cat_bot_bringup/: CMakeLists.txt  package.xml
[Rpi] cat_bot_ws/cat_bot_camera/: setup.cfg
[Rpi] cat_bot_ws/cat_bot_description/: CMakeLists.txt  package.xml
[Rpi] cat_bot_ws/src/cat_bot_bringup/: CMakeLists.txt
[Rpi] cat_bot_ws/src/cat_bot_bringup/config/: laser_filter.yaml  lidar_slam_only.yaml
[Rpi] cat_bot_ws/src/cat_bot_bringup/launch/: bringup.launch.py  robot_system.launch.py
[Rpi] cat_bot_ws/src/cat_bot_bringup/params/: cat_bot_nav2_params.yaml
[Rpi] cat_bot_ws/src/cat_bot_bringup/src/: fake_odom_publisher.py
[Rpi] cat_bot_ws/src/cat_bot_gateway/: CMakeLists.txt  package.xml
[Rpi] cat_bot_ws/src/cat_bot_gateway/config/: cat_bot_twistmux.yaml
[Rpi] cat_bot_ws/src/cat_bot_gateway/launch/: gateway.launch.py
[Rpi] cat_bot_ws/src/cat_bot_gateway/src/: gateway_receiver.cpp  gateway_receiver_sj.cpp  gateway_receiver_test.cpp
catbotArm_ws/data/: README.md
catbotarm_ws/: .gitignore
catbotarm_ws/catbot_core/: package.xml  setup.py
catbotarm_ws/install/: local_setup.sh  setup.sh
catbotarm_ws/log/: latest_build
client/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
client/src/: App.jsx  index.css
cosyvoice_service/: Dockerfile  extract_default_tokens.ps1  extract_tokens_api.py  trim_and_extract_male_30s_50s.ps1
cosyvoice_service/sample_voices/: female_50s_prompt.txt  male_30s_prompt.txt  male_40s_prompt.txt  male_50s_prompt.txt
doc/: Proposal.md  troubleshooting.md
doc/hardware/: PinMapping.md
embedded/: README.md
embedded/stm32_f446re/: .cproject  .project  PetNer_F446RE_FW.ioc
est_cat_state/src/: analyze_attention_topk.py  dataset.py  eval.py  infer_pose_track_overlay.py  infer_video_cat_pose_action_emotion.py  inference.py  make_csv.py  make_yolo_pose_dataset_from_videojson.py  model.py  oversample_csv.py  plot_cm.py  predict_video.py  predict_video_with_keypoints.py  print_labels.py  train_stage2_cat.py  train_stage3_attn_2pool.py  train_stage3_attn_2pool_stable.py  train_stage3_cat.py  train_stage3_video_pool_attn.py
exec/: PORTING_MANUAL.md
fake_robot/: homing.py  mqtt_bridge.py  real_robot_simulator.py  robot_simulation_full.py  robot_webrtc.py
hardware/: BOM.md  Kinematics.md  PinMapping.md  PowerArchitecture.md  Protocol.md  README.md  systemArchitecture.md
nginx/: Dockerfile  nginx.conf
robot_test/: mqtt_bridge.py  robot_webrtc.py  simulate_data.py
scripts/: pack_cosyvoice_inference.ps1
server/: .gitignore  Dockerfile  build.gradle
src/: train.py  train_stage1_cat.py  train_stage3_attn_2pool_stable_balanced300.py
vla/catbotArm_ws/src/catbot_interfaces/: CMakeLists.txt  package.xml
vla/catbotArm_ws/src/catbot_interfaces/action/: VlaTask.action
vla/local_ws/src/catbot_interfaces/: CMakeLists.txt  package.xml
vla/local_ws/src/catbot_interfaces/action/: VlaTask.action
vla/local_ws/src/catbot_interfaces/src/: aruco.py  cmd.txt  dock_controller.py  dock_test.py  mission.py
vla/local_ws/src/catbot_interfaces/src/config/: mission.yaml  points.yaml
vla/local_ws/src/catbot_interfaces/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
vla/local_ws/src/catbot_interfaces/src/log/: latest_build
(+543 files in other folders)
